deputy-library/src/snapshots/deputy_library__repository__tests__index_info_is_found.snap
---
source: deputy-library/src/repository.rs
expression: metadata_list
---
[
    IndexInfo {
        name: "some-package-name",
        version: "0.1.0",
        checksum: "aa30b1cc05c10ac8a1f309e3de09de484c6de1dc7c226e2cf8e1a518369b1d73",
    },
]
