deputy-library/src/snapshots/deputy_library__repository__tests__index_repository_is_updated_with_package-2.snap
---
source: deputy-library/src/repository.rs
expression: parent.message().unwrap()
---
"Adding package: some-package-name, version: 0.1.0"
